--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^32.0.0",
+    "ag-grid-react": "^32.0.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.5",
+    "dayjs": "^1.11.11",
     "firebase": "^10.8.0",
+    "md5": "^2.3.0",
     "mysql2": "^3.9.3",
     "preline": "^2.0.3",
     "react": "^18.2.0",
     "react-csv-reader": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.1",
